[tool.poetry]
name='brunette'
version='0.2.3.dev0'
description='hi'
authors=['adam']

[tool.poetry.dependencies]
black = { url = "https://github.com/psf/black/archive/refs/tags/22.1.0.tar.gz" }
click = ''

[tool.poetry.scripts]
brunette = 'brunette.brunette:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
