[tool.poetry]
name='brunette'
version='0.2.3.dev0'
description='hi'
authors=['adam']

[tool.poetry.dependencies]
black = { url = "https://files.pythonhosted.org/packages/42/58/8a3443a5034685152270f9012a9d196c9f165791ed3f2777307708b15f6c/black-22.1.0.tar.gz" }
click = ''

[tool.poetry.scripts]
brunette = 'brunette.brunette:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
